# handbook-abc-jax

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
notebooks/: abc_importance_sampling.ipynb  abc_importance_sampling.py  abc_mcmc.ipynb  abc_mcmc.py  abc_rejection_sampling.ipynb  abc_rejection_sampling.py  abc_rejection_sampling_stopping.ipynb  abc_rejection_sampling_stopping.py  abc_smc.ipynb  abc_smc.py  empirical_likelihood_nuts.ipynb  empirical_likelihood_nuts.py  emplik.py  ep_empirical_likelihood.ipynb  ep_empirical_likelihood.py  synthetic_likelihood_mcmc.ipynb  synthetic_likelihood_mcmc.py
