[project]
name = "handbook-abc-jax"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "arviz-plots>=0.8.0",
    "blackjax>=1.3",
    "ipython>=9.10.0",
    "jax>=0.9.0.1",
    "jupyterlab>=4.5.5",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "msprime>=1.4.0",
    "nbformat>=5.10.4",
    "numpyro>=0.20.0",
    "scienceplots>=2.2.1",
    "seaborn>=0.13.2",
]
